@@ -16,8 +16,8 @@
 			</last>
 		</scripts>
 		<sql>
-			<db>453</db>
-			<file>453</file>
+			<db>454</db>
+			<file>454</file>
 		</sql>
 	</versions>
 </nzedb>
